--- a/TalentShow/app/src/main/res/layout/fragment_choose_auth.xml
+++ b/TalentShow/app/src/main/res/layout/fragment_choose_auth.xml
@@ -10,7 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/sing_or_log"
-        android:textColor="@color/blackText"
+        android:textColor="@color/whiteText"
         android:textSize="34sp"
         android:gravity="center"
         android:layout_marginTop="110dp"
