--- a/TalentShow/app/src/main/res/layout/rating_recycler_item_star.xml
+++ b/TalentShow/app/src/main/res/layout/rating_recycler_item_star.xml
@@ -27,7 +27,7 @@
             android:layout_gravity="center_horizontal"
             android:gravity="center"
             android:scaleType="fitXY">
-            <VideoView
+            <com.google.android.exoplayer2.ui.PlayerView
                 android:id="@+id/rating_item_video"
                 android:layout_alignParentTop="true"
                 android:layout_alignParentBottom="true"
@@ -37,6 +37,7 @@
                 android:layout_alignParentStart="true"
                 android:layout_width="fill_parent"
                 android:layout_height="fill_parent"
+                app:use_controller="false"
                 />
         </RelativeLayout>
 
