--- a/TalentShow/app/src/main/res/layout/fragment_profile.xml
+++ b/TalentShow/app/src/main/res/layout/fragment_profile.xml
@@ -173,6 +173,7 @@
             android:layout_height="match_parent"
             android:visibility="gone"
             app:use_controller="false"
+            app:resize_mode="zoom"
 
         />
 
@@ -233,6 +234,7 @@
             android:layout_height="match_parent"
             android:visibility="gone"
             app:use_controller="false"
+            app:resize_mode="zoom"
             />
 
         <ImageButton
@@ -291,6 +293,7 @@
             android:layout_height="match_parent"
             android:visibility="gone"
             app:use_controller="false"
+            app:resize_mode="zoom"
             />
 
         <ImageButton
@@ -348,6 +351,7 @@
             android:layout_height="match_parent"
             android:visibility="gone"
             app:use_controller="false"
+            app:resize_mode="zoom"
             />
 
         <ImageButton
