--- a/TalentShow/app/src/main/res/layout/rating_recycler_item_star.xml
+++ b/TalentShow/app/src/main/res/layout/rating_recycler_item_star.xml
@@ -38,6 +38,7 @@
                 android:layout_width="fill_parent"
                 android:layout_height="fill_parent"
                 app:use_controller="false"
+                app:resize_mode="zoom"
                 />
         </RelativeLayout>
 
