--- a/TalentShow/app/src/main/res/layout/fragment_casting.xml
+++ b/TalentShow/app/src/main/res/layout/fragment_casting.xml
@@ -43,6 +43,7 @@
                 android:layout_width="50dp"
                 android:layout_height="50dp"
                 android:visibility="invisible"
+                android:elevation="20dp"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
