--- a/TalentShow/app/src/main/res/layout/fragment_video_best_main.xml
+++ b/TalentShow/app/src/main/res/layout/fragment_video_best_main.xml
@@ -33,6 +33,17 @@
         app:layout_constraintTop_toBottomOf="@id/fragment_video_choose_main_text1"
         app:layout_constraintBottom_toTopOf="@id/fragment_video_best_main_bar"/>
 
+    <ProgressBar
+        android:id="@+id/best_video_fragment_progress_bar"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:visibility="invisible"
+        android:elevation="20dp"
+        app:layout_constraintTop_toTopOf="@+id/fragment_video_best_main_video"
+        app:layout_constraintBottom_toBottomOf="@+id/fragment_video_best_main_video"
+        app:layout_constraintStart_toStartOf="@+id/fragment_video_best_main_video"
+        app:layout_constraintEnd_toEndOf="@+id/fragment_video_best_main_video"/>
+
     <TextView
         android:id="@+id/fragment_video_choose_main_text1"
         android:layout_width="0dp"
