--- a/TalentShow/app/src/main/res/drawable/casting_bottom_gradient.xml
+++ b/TalentShow/app/src/main/res/drawable/casting_bottom_gradient.xml
@@ -1,6 +1,13 @@
-<shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="rectangle">
-      <gradient
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:aapt="http://schemas.android.com/aapt"
+    android:width="343dp"
+    android:height="80dp"
+    android:viewportWidth="343"
+    android:viewportHeight="80">
+  <path
+      android:pathData="M0,0H343V80H0V0Z">
+    <aapt:attr name="android:fillColor">
+      <gradient 
           android:startY="0"
           android:startX="171.5"
           android:endY="80"
@@ -10,5 +17,6 @@
         <item android:offset="0.291667" android:color="#5E000000"/>
         <item android:offset="1" android:color="#CC000000"/>
       </gradient>
-    <corners android:radius="0dp"/>
-</shape>
+    </aapt:attr>
+  </path>
+</vector>
