--- a/TalentShow/app/src/main/res/drawable/casting_top_gradient.xml
+++ b/TalentShow/app/src/main/res/drawable/casting_top_gradient.xml
@@ -1,6 +1,13 @@
-<shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="rectangle">
-      <gradient
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:aapt="http://schemas.android.com/aapt"
+    android:width="343dp"
+    android:height="60dp"
+    android:viewportWidth="343"
+    android:viewportHeight="60">
+  <path
+      android:pathData="M343,60L0,60L-0,-0L343,-0L343,60Z">
+    <aapt:attr name="android:fillColor">
+      <gradient 
           android:startY="60"
           android:startX="171.5"
           android:endY="-1.55246E-5"
@@ -10,5 +17,6 @@
         <item android:offset="0.505208" android:color="#4C000000"/>
         <item android:offset="1" android:color="#7C000000"/>
       </gradient>
-    <corners android:radius="0dp"/>
-</shape>
+    </aapt:attr>
+  </path>
+</vector>
