--- a/TalentShow/app/src/main/res/layout/fragment_load_file.xml
+++ b/TalentShow/app/src/main/res/layout/fragment_load_file.xml
@@ -57,13 +57,13 @@
         android:id="@+id/fragment_video_load_rectangle"
         android:layout_width="0dp"
         android:layout_height="180dp"
-        android:layout_marginTop="13dp"
-        android:layout_marginBottom="182dp"
         android:layout_marginStart="16dp"
+        android:layout_marginTop="12dp"
         android:layout_marginEnd="16dp"
         android:background="@drawable/file_load_button_background"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/fragment_load_file_text1">
 
 
@@ -71,70 +71,22 @@
             android:id="@+id/fragment_file_load_button_add"
             android:layout_width="50dp"
             android:layout_height="50dp"
-            android:padding="15dp"
             android:background="@drawable/blue_circle"
-            app:layout_constraintStart_toStartOf="parent"
+            android:padding="15dp"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"/>
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <View
             android:layout_width="22dp"
             android:layout_height="22dp"
             android:background="@drawable/white_cross"
-            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"/>
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-    <TextView
-        android:id="@+id/fragment_video_load_text2"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginTop="17dp"
-        android:textColor="@color/whiteText"
-        android:textSize="20sp"
-        android:text="@string/profile_description"
-        app:layout_constraintTop_toBottomOf="@id/fragment_video_load_rectangle"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
-
-    <EditText
-        android:id="@+id/fragment_video_load_description"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="13dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
-        android:paddingTop="16dp"
-        android:paddingStart="15dp"
-        android:paddingEnd="15dp"
-        android:paddingBottom="15dp"
-        android:maxLength="280"
-        android:background="@drawable/edit_text_rectangle_with_border"
-        android:textColorHint="@color/hint_text_color"
-        android:textSize="15sp"
-        android:hint="@string/tell_about_urself"
-        android:textColor="@color/whiteEditableText"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/fragment_video_load_text2"/>
-
-    <TextView
-        android:id="@+id/fragment_video_load_text3"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginTop="8dp"
-        android:textSize="12sp"
-        android:textColor="@color/grayText"
-        android:text="@string/text_for_casting"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/fragment_video_load_description"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
