--- a/TalentShow/app/src/main/res/layout/fragment_video_best_main.xml
+++ b/TalentShow/app/src/main/res/layout/fragment_video_best_main.xml
@@ -20,6 +20,15 @@
 <!--        app:layout_constraintVertical_bias="0.0"-->
 <!--        />-->
 
+    <ProgressBar
+        android:id="@+id/fragment_video_best_main_progressbar"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:visibility="invisible"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <VideoView
         android:id="@+id/fragment_video_best_main_video"
         android:layout_width="0dp"
