--- a/TalentShow/app/src/main/res/layout/notification_item.xml
+++ b/TalentShow/app/src/main/res/layout/notification_item.xml
@@ -5,6 +5,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:paddingStart="16dp"
     android:paddingEnd="16dp"
+    android:paddingTop="7dp"
+    android:paddingBottom="7dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/darkBackground">
 
