--- a/TalentShow/app/src/main/res/layout/fragment_authorisation.xml
+++ b/TalentShow/app/src/main/res/layout/fragment_authorisation.xml
@@ -104,7 +104,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            app:layout_constraintGuide_percent="0.4" />
+            app:layout_constraintGuide_begin="100dp" />
 
         <EditText
             android:id="@+id/auth_email_edit"
@@ -117,6 +117,8 @@
             android:background="@color/none_color"
             android:paddingTop="5dp"
             android:paddingBottom="5dp"
+            android:textColorHint="@color/hint_text_color"
+            android:hint="@string/enter_ur_mail"
             app:layout_constraintStart_toEndOf="@id/fragment_filed1_guideline"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -149,12 +151,12 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toStartOf="@id/fragment_filed2_guideline"/>
 
-        <androidx.constraintlayout.widget.Guideline
-            android:id="@+id/fragment_filed2_guideline"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            app:layout_constraintGuide_percent="0.4" />
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/fragment_filed2_guideline"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_begin="100dp" />
 
         <EditText
             android:id="@+id/auth_password_edit"
@@ -167,6 +169,8 @@
             android:background="@color/none_color"
             android:paddingBottom="5dp"
             android:paddingTop="5dp"
+            android:textColorHint="@color/hint_text_color"
+            android:hint="Введите пароль"
             app:layout_constraintStart_toEndOf="@id/fragment_filed2_guideline"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
