--- a/TalentShow/app/src/main/res/layout/fragment_profile.xml
+++ b/TalentShow/app/src/main/res/layout/fragment_profile.xml
@@ -32,12 +32,8 @@
         android:layout_width="73dp"
         android:layout_height="73dp"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="145dp"
-        android:layout_marginEnd="286dp"
-        android:layout_marginBottom="585dp"
+        android:layout_marginTop="17dp"
         android:contentDescription="Add"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.555"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -65,96 +61,105 @@
         android:background="#00000000"
         android:enabled="false"
         android:id="@+id/fragment_profile_name"
-        android:layout_width="252dp"
-        android:layout_height="36dp"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
         android:textSize="22sp"
         android:textStyle="bold"
         android:textColor="@color/whiteText"
-        android:layout_marginTop="113dp"
-        android:layout_marginBottom="574dp"
-        android:layout_marginStart="109dp"
+        android:layout_marginTop="17dp"
+        android:layout_marginStart="20dp"
         android:layout_marginEnd="14dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toEndOf="@id/fragment_profile_image"
         />
 
     <TextView
         android:id="@+id/fragment_profile_likes"
         android:text="0 Лайков"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:textColor="@color/whiteText"
         android:textSize="20sp"
-        android:layout_marginTop="193dp"
-        android:layout_marginBottom="520dp"
+        android:layout_marginTop="15dp"
         android:layout_marginStart="16dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginEnd="16dp"
+        app:layout_constraintTop_toBottomOf="@id/fragment_profile_image"
         app:layout_constraintStart_toStartOf="parent"
-        />
+        app:layout_constraintEnd_toEndOf="parent"/>
 
     <TextView
-        android:text="Это количество лайков, которые ты получил за все свои видео"
-        android:layout_width="344dp"
+        android:id="@+id/fragment_profile_text1"
+        android:text="@string/number_likes_u_got"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:textColor="#A2A2A2"
         android:textSize="11sp"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="4dp"
         android:layout_marginStart="16dp"
-        app:layout_constraintTop_toTopOf="@id/fragment_profile_likes"
+        android:layout_marginEnd="16dp"
+        app:layout_constraintTop_toBottomOf="@id/fragment_profile_likes"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         />
 
     <TextView
-        android:layout_width="wrap_content"
+        android:id="@+id/fragment_profile_text2"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="Описание"
         android:textColor="@color/whiteText"
         android:textSize="20sp"
-        android:layout_marginTop="46dp"
+        android:layout_marginTop="22dp"
         android:layout_marginStart="16dp"
-        app:layout_constraintTop_toTopOf="@id/fragment_profile_likes"
+        android:layout_marginEnd="16dp"
+        app:layout_constraintTop_toBottomOf="@id/fragment_profile_text1"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         />
 
     <EditText
         android:id="@+id/fragment_profile_description"
-        android:layout_width="343dp"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="Описание"
         android:gravity="top"
         android:textSize="15sp"
         android:textColor="@color/whiteText"
-        android:layout_marginTop="85dp"
+        android:layout_marginTop="13dp"
         android:layout_marginStart="16dp"
-        app:layout_constraintTop_toTopOf="@id/fragment_profile_likes"
+        android:layout_marginEnd="16dp"
+        app:layout_constraintTop_toBottomOf="@id/fragment_profile_text2"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+
         />
 
 
     <TextView
         android:id="@+id/fragment_profile_video_tv"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="20dp"
+        android:layout_marginEnd="16dp"
         android:text="Загруженные видео"
         android:textColor="@color/whiteText"
         android:textSize="20sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/fragment_profile_description" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/fragment_profile_guideline"/>
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="160dp"
-        android:layout_height="100dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="20dp"
         android:id="@+id/fragment_profile_container1"
         app:layout_constraintTop_toBottomOf="@id/fragment_profile_video_tv"
         app:layout_constraintStart_toStartOf="parent"
-        >
+        app:layout_constraintBottom_toTopOf="@id/fragment_profile_container3"
+        app:layout_constraintEnd_toStartOf="@id/fragment_profile_container2">
 
         <View
             android:id="@+id/fragment_profile_settings1"
@@ -208,8 +213,8 @@
 
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="160dp"
-        android:layout_height="100dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:layout_marginEnd="26dp"
         android:layout_marginTop="20dp"
         android:layout_marginStart="40dp"
@@ -217,6 +222,7 @@
         app:layout_constraintTop_toBottomOf="@id/fragment_profile_video_tv"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/fragment_profile_container1"
+        app:layout_constraintBottom_toTopOf="@id/fragment_profile_container4"
         >
 
         <View
@@ -269,13 +275,16 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
 
-        android:layout_width="160dp"
-        android:layout_height="100dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="20dp"
+        android:layout_marginBottom="20dp"
         android:id="@+id/fragment_profile_container3"
         app:layout_constraintTop_toBottomOf="@id/fragment_profile_container1"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/fragment_profile_container4"
         >
 
         <View
@@ -327,15 +336,17 @@
 
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="160dp"
-        android:layout_height="100dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:layout_marginEnd="26dp"
         android:layout_marginTop="20dp"
         android:layout_marginStart="40dp"
+        android:layout_marginBottom="20dp"
         android:id="@+id/fragment_profile_container4"
-        app:layout_constraintTop_toBottomOf="@id/fragment_profile_container1"
+        app:layout_constraintTop_toBottomOf="@id/fragment_profile_container2"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/fragment_profile_container1"
+        app:layout_constraintStart_toEndOf="@+id/fragment_profile_container3"
+        app:layout_constraintBottom_toBottomOf="parent"
         >
 
         <View
@@ -384,6 +395,12 @@
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/fragment_profile_guideline"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.5" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
