--- a/TalentShow/app/src/main/res/layout/fragment_registration.xml
+++ b/TalentShow/app/src/main/res/layout/fragment_registration.xml
@@ -51,11 +51,11 @@
         android:id="@+id/fragment_reg_logo"
         android:layout_width="150dp"
         android:layout_height="150dp"
-        android:layout_marginTop="50dp"
         android:background="@drawable/logo"
         app:layout_constraintTop_toBottomOf="@id/fragment_reg_back"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/fragment_reg_guideline"/>
 
     <TextView
         android:id="@+id/fragment_reg_text1"
@@ -69,7 +69,7 @@
         android:textColor="@color/whiteText"
         android:text="@string/sign_up"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/fragment_reg_logo"
+        app:layout_constraintTop_toBottomOf="@id/fragment_reg_guideline"
         app:layout_constraintEnd_toEndOf="parent"/>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -182,26 +182,27 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
+        android:layout_marginTop="14dp"
         android:layout_marginEnd="16dp"
         android:background="@drawable/auth_filed_backgroud"
-        android:layout_marginTop="14dp"
-        app:layout_constraintTop_toBottomOf="@id/fragment_reg_field_2"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent">
+        app:layout_constraintTop_toBottomOf="@id/fragment_reg_field_2">
+
         <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginStart="12dp"
+            android:layout_marginTop="14dp"
+            android:layout_marginBottom="14dp"
+            android:gravity="start"
+            android:text="@string/password"
             android:textColor="@color/hint_text_color"
             android:textSize="17sp"
-            android:text="@string/password"
-            android:layout_marginStart="12dp"
-            android:layout_marginBottom="14dp"
-            android:layout_marginTop="14dp"
-            android:gravity="start"
-            app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@id/fragment_filed3_guideline"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toStartOf="@id/fragment_filed3_guideline"/>
+            app:layout_constraintTop_toTopOf="parent" />
 
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/fragment_filed3_guideline"
@@ -215,18 +216,19 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginEnd="12dp"
-            android:textSize="17sp"
+            android:background="@color/none_color"
+            android:hint="@string/create_password"
+            android:inputType="textPassword"
             android:paddingTop="5dp"
             android:paddingBottom="5dp"
-            android:background="@color/none_color"
             android:textColor="@color/whiteText"
-            android:inputType="textPassword"
-            android:hint="@string/create_password"
             android:textColorHint="@color/hint_text_color"
-            app:layout_constraintStart_toEndOf="@id/fragment_filed3_guideline"
-            app:layout_constraintEnd_toEndOf="parent"
+            android:textSize="17sp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintTop_toTopOf="parent"/>
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@id/fragment_filed3_guideline"
+            app:layout_constraintTop_toTopOf="parent" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <TextView
@@ -262,5 +264,12 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toBottomOf="@id/fragment_registration_text1"/>
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/fragment_reg_guideline"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.35" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
