--- a/TalentShow/app/src/main/res/layout/fragment_profile_settings.xml
+++ b/TalentShow/app/src/main/res/layout/fragment_profile_settings.xml
@@ -48,7 +48,7 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="12dp"
             android:textSize="17sp"
-            android:text="password"
+            android:text="\u25CF\u25CF\u25CF"
             android:textColor="@color/whiteText"
             android:inputType="textEmailAddress"
             android:background="@color/none_color"
